--- a/app/src/main/res/layout/inbound_calls_fragment.xml
+++ b/app/src/main/res/layout/inbound_calls_fragment.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.inbound_calls.InboundCallsFragment">
 
     <ListView
+        android:id="@+id/inbound_call_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false" />
