--- a/app/src/main/res/layout/parked_calls_fragment.xml
+++ b/app/src/main/res/layout/parked_calls_fragment.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.parked_calls.ParkedCallsFragment">
 
     <ListView
+        android:id="@+id/parked_call_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false" />
